# hebi-cpp-examples

./: .gitattributes  .gitignore  README.md  armStart.sh  azure-pipelines.yml  build_mav_trajectory.sh  install.sh
advanced/commands/: README.txt  command_control_strategy_example.cpp  command_gains.cpp  command_led_example.cpp  command_persist_settings_example.cpp  command_position_example.cpp  command_settings_example.cpp  command_spring_constants_example.cpp
advanced/demos/: arm_teach_repeat.cpp  gravity_compensation.cpp  master_slave_async_example.cpp
advanced/feedback/: feedback_async_example.cpp  io_feedback_example.cpp  led_feedback_example.cpp
advanced/lookup/: README.txt  lookup_example.cpp  lookup_general_example.cpp  lookup_helpers.cpp
basic/: 01_lookup.cpp  01a_lookup.cpp  01b_get_group_single_module.cpp  01c_get_group_multiple_modules.cpp  02_feedback.cpp  02a_feedback_foreground.cpp  02b_feedback_background.cpp  03_command.cpp  03a_command_position.cpp  03b_command_velocity.cpp  03c_command_effort.cpp  03d_command_pos_vel.cpp  03e_command_pos_vel_effort.cpp  03f_command_vel_w_feedback.cpp  04_kinematics.cpp  04a_gains_position_kp.cpp  04c_gains_loading_xml.cpp  05_ik.cpp  05_trajectory.cpp  06_trajectory.cpp  06b_kinematics_fwd_kinematics.cpp  06c_kinematics_inv_kinematics.cpp  07a_robot_3_dof_arm.cpp  07b_robot_6_dof_arm.cpp  README.txt  plot_functions.h
basic/actuator/: 02a_feedback_foreground.cpp  02b_feedback_background.cpp  03a_command_position.cpp  03b_command_velocity.cpp  03c_command_effort.cpp  03e_command_pos_vel_effort.cpp  03f_command_vel_w_feedback.cpp  04a_gains_position_kp.cpp  04b_gains_saving_xml.cpp  05_trajectory.cpp  06a_kinematics_setup.cpp  06b_kinematics_fwd_kinematics.cpp  06c_kinematics_inv_kinematics.cpp  07a_robot_3_dof_arm.cpp  07b_robot_6_dof_arm.cpp
basic/hebi-cpp/: CMakeLists.txt
hebi-charts/: download.cmake  hebi_charts.cmake  hebi_charts.hpp
hebi-cpp/: CMakeLists.txt
hebi-cpp/hebi/: CMakeLists.txt
hebi-cpp/src/: version.cpp
hebi-cpp/src/arm/: arm.cpp  arm.hpp  end_effector.hpp  kinematics_helper.cpp  kinematics_helper.hpp
hebi-cpp/src/arm_api/: arm_kinematics.cpp  arm_kinematics.hpp  arm_trajectory.cpp  arm_trajectory.hpp  omni_base.hpp
hebi-cpp/src/util/: grav_comp.hpp  mobile_io.cpp  mobile_io.hpp
kits/daisy/: CMakeLists.txt  README.md  daisyStart.sh  hexapod_parameters.cpp  install.sh  leg.cpp  leg.hpp  step.cpp  step.hpp
kits/daisy/display/: hexapod_view_2d.cpp  hexapod_view_2d.hpp
kits/daisy/input/: input_manager_mobile_io.cpp
kits/daisy/param_display/: hexapod_parameter_gui.cpp  hexapod_parameter_view.cpp  hexapod_parameter_view.hpp  hexapod_parameter_view_2d.cpp  hexapod_parameter_view_2d.hpp  i_hexapod_parameter_view.hpp
kits/daisy/resources/: gains18.xml  gains3.xml  hex_config.xml  left.hrdf  right.hrdf
kits/daisy/robot/: hexapod.hpp
kits/daisy/src/: hexapod_control.cpp  input_test.cpp  main.cpp  parameter_gui.cpp  parameter_gui_2d.cpp
kits/daisy/src/display/: hexapod_view_2d.cpp  hexapod_view_2d.hpp
kits/daisy/src/input/: input_manager.hpp  input_manager_mobile_io.cpp  input_manager_mobile_io.hpp
kits/daisy/src/param_display/: hexapod_parameter_gui.cpp  hexapod_parameter_gui.hpp  hexapod_parameter_view.cpp  hexapod_parameter_view.hpp  hexapod_parameter_view_2d.cpp  hexapod_parameter_view_2d.hpp  i_hexapod_parameter_view.hpp
kits/daisy/src/robot/: hexapod.cpp  hexapod.hpp  hexapod_parameters.cpp  hexapod_parameters.hpp  leg.cpp  leg.hpp  step.cpp  step.hpp
kits/daisy/src/xml_util/: xml_helpers.cpp
kits/daisy/xml_util/: xml_helpers.hpp
mav_trajectory_generation/: CMakeLists.txt
mav_trajectory_generation/include/mav_trajectory_generation/: convolution.h  extremum.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  segment.h  test_utils.h  timing.h  trajectory.h  vertex.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
mav_trajectory_generation/include/mav_trajectory_generation/rpoly/: rpoly_ak1.h
mav_trajectory_generation/src/: motion_defines.cpp  polynomial.cpp  polynomial_timing_evaluation.cpp  segment.cpp  timing.cpp  trajectory.cpp  vertex.cpp
mav_trajectory_generation/src/rpoly/: rpoly_ak1.cpp
mav_trajectory_generation/test/: test_polynomial.cpp  test_polynomial_optimization.cpp
mrs_uav_trajectory_generation/: CMakeLists.txt  README.md
mrs_uav_trajectory_generation/include/eth_mav_msgs/: common.h  eigen_mav_msgs.h
mrs_uav_trajectory_generation/include/eth_trajectory_generation/: convolution.h  extremum.h  misc.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  segment.h  test_utils.h  timing.h  trajectory.h  trajectory_sampling.h  vertex.h
mrs_uav_trajectory_generation/include/eth_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
mrs_uav_trajectory_generation/include/eth_trajectory_generation/rpoly/: rpoly_ak1.h
mrs_uav_trajectory_generation/src/: mrs_trajectory_generation.cpp  path_random_flier.cpp
mrs_uav_trajectory_generation/src/eth_trajectory_generation/: motion_defines.cpp  polynomial.cpp  segment.cpp  timing.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp
mrs_uav_trajectory_generation/src/eth_trajectory_generation/rpoly/: rpoly_ak1.cpp
projects/cmake/: CMakeLists.txt  DownloadHebiCpp.cmake  nothing.cpp
scripts/: depends.json  download_depends.py
util/: .omni_base.hpp.swp  base.hpp  grav_comp.hpp  group_manager.hpp  group_trajectory_follower.cpp  group_trajectory_follower.hpp  group_trajectory_manager.hpp  matplotlibcpp.h  mobile_base.hpp  omni_base.cpp  omni_base.hpp  plot_function.hpp  plot_functions.h  trajectory_time_heuristic.hpp  vector_utils.h
util/input/: CMakeLists.txt  event_handler.cpp  event_handler_internal.h  joystick.cpp  joystick_impl.cpp  joystick_internal.h  joystick_mapper.cpp  lifecycle.cpp
util/input/include/: event_handler.h  joystick.h
(+195 files in other folders)
